<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.ckl.articles.modules.read.ReadActivity">

    <ScrollView
        android:id="@+id/readScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarStyle="outsideOverlay">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/readTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10sp"
                android:textAlignment="center"
                android:textSize="24sp"
                android:fontFamily="sans-serif"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:text="@string/readTitle" />
        <!--android:textAppearance="@android:style/TextAppearance.Material.Headline"-->

            <ImageView
                android:id="@+id/readImage"
                android:layout_width="match_parent"
                android:layout_height="200sp"
                android:background="@android:color/background_light"
                android:scaleType="fitCenter"
                android:src="@mipmap/ic_launcher" />

            <LinearLayout
                android:id="@+id/infoLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10sp">

                <TextView
                    android:id="@+id/readDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/readDate"
                    android:layout_gravity="end"
                    android:textSize="14sp"
                    android:textColor="@android:color/black" />
        <!--android:textAppearance="@android:style/TextAppearance.Material.Small"-->

                <TextView
                    android:id="@+id/readAuthor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/readAuthor"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/readWebsite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/readWebsite"
                    android:textColor="@color/colorAccent" />
            </LinearLayout>

            <TextView
                android:id="@+id/readContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10sp"
                android:textSize="20sp"
                android:fontFamily="sans-serif-medium"
                android:textColor="@android:color/black"
                android:text="@string/readContent" />
        <!--android:textAppearance="@android:style/TextAppearance.Material.Title"-->

            <!--<CheckBox-->
                <!--android:id="@+id/checkBox2"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:checked="false"-->
                <!--android:text="@string/readMark" />-->

        </LinearLayout>
    </ScrollView>
</LinearLayout>
